--- a/index1.html
+++ b/index1.html
@@ -19,10 +19,7 @@
 
 <body>
     <!-- header section started -->
-    <header class="myheader">
-        <video  loop muted autoplay class="bgvideo" >
-            <source src="img/BG.mp4" type="video/mp4">
-        </video>
+    <header>
         <!-- navigation section started -->
         <nav class="navbar navbar-expand-lg navbar-light" id="my-nav">
             <div class="container-fluid my-container ">
@@ -32,7 +29,7 @@
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse my-navbar my-t-nav" id="navbarSupportedContent">
+                <div class="collapse navbar-collapse my-navbar" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link my-link" aria-current="page" href="#">Order QR</a>
@@ -58,7 +55,7 @@
         <div class="container my-container">
             <div class="main row">
                 <div class="content col-md-6">
-                    <h1 class="big-heading">Unlock Convenience with
+                    <h1>Unlock Convenience with
                         ScanZu QR Products</h1>
                     <p>A Next Generation Communication and Tracking Technology by ScanZu. Its secure,low cost,
                         zero maintainance technology that works anywhere.</p>
@@ -80,7 +77,7 @@
         </div>
         <div class="content col-lg-6 col-md-6 col-sm-12">
             <h4>Smart Doorbell</h4>
-            <h1 class="big-heading">Seamless Security with <br> Door QR Tags</h1>
+            <h1>Seamless Security with <br> Door QR Tags</h1>
             <p>Now you can monitor who rings the doorbell, even when you're not at home. The doorbell rings on your
                 phone with an option of Video Call, Audio Call or Text Message. You can see the person who calls you,
                 talk or chat. Never again will you have to run out to answer the doorbell. Visitor don't need an App.
@@ -100,7 +97,7 @@
 
         <div class="content col-lg-6 col-md-6 col-sm-12">
             <h4>Vehicle QR Tag</h4>
-            <h1 class="big-heading">Instant Access to Your Vehicle's Vital Information</h1>
+            <h1>Instant Access to Your Vehicle's Vital Information</h1>
             <p class="bottom">ScanZu Vehicle tag placed on your vehicle helps people to connect with you in case of wrong parking,
                 accident or roadside assistance. The user parks their vehicle at any spot which might be a reason or
                 issue for someone. With the help of ScanZu Vehicle QR tag, the person can quickly contact you to take
@@ -121,7 +118,7 @@
         </div>
         <div class="content col-lg-6 col-md-6 col-sm-12">
             <h4>Luggage Tag</h4>
-            <h1 class="big-heading">Never Lose Your Luggage
+            <h1>Never Lose Your Luggage
                 Again!</h1>
             <p>ScanZu luggage tags are the perfect way to ensure your luggage will never go missing. Each tag has a
                 unique QBell code on it, that a finder can use to instantly contact you - without seeing any of your
@@ -139,7 +136,7 @@
 
         <div class="content col-lg-6 col-md-6 col-sm-12">
             <h4>Pet QR Tag</h4>
-            <h1 class="big-heading">Your Pet's Best Friend <br>
+            <h1>Your Pet's Best Friend <br>
                 in an Emergency</h1>
             <p class="bottom">Our pet mean so much to us, and the thought of them one day getting lost is something we would all rather
                 do not wish to imagine. ScanZU Pet Tag is a sleek, durable metal tag that attaches easily to your pet's
@@ -155,17 +152,17 @@
     <!-- faq section started -->
     <div class="faq-sec container my-container">
         <h4>FAQ's</h4>
-        <h1 class="big-heading">Common Questions & Answers</h1>
+        <h1>Common Questions & Answers</h1>
         <div class="accordion" id="accordionPanelsStayOpenExample">
             <div class="accordion-item">
                 <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="false"
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
                         aria-controls="panelsStayOpen-collapseOne">
                         1. What is ScanZu?
                     </button>
                 </h2>
-                <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse"
+                <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
                     aria-labelledby="panelsStayOpen-headingOne">
                     <div class="accordion-body">
                         <p>ScanZu is a QR code Smart Doorbell system, that instantly lets you know who is at the door no
@@ -178,12 +175,12 @@
             <div class="accordion-item">
                 <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
+                        data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="true"
                         aria-controls="panelsStayOpen-collapseTwo">
                         2. Do Visitors need to install any App to use my ScanZu?
                     </button>
                 </h2>
-                <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
+                <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse show"
                     aria-labelledby="panelsStayOpen-headingTwo">
                     <div class="accordion-body">
                         <p>ScanZu is designed to be compatible with any smartphone that can read QR codes. Your visitors
@@ -200,7 +197,7 @@
                         3. How do I get the ScanZu kit?
                     </button>
                 </h2>
-                <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
+                <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse show"
                     aria-labelledby="panelsStayOpen-headingThree">
                     <div class="accordion-body">
                         <p>To order a ScanZu QR kit, simply login to ScanZu website or app and order. We are also
@@ -217,7 +214,7 @@
     <div class="app">
         <div class="container  my-container row">
             <div class="content col-lg-6 col-md-6 col-sm-12">
-                <h1 class="big-heading">Your QR Tag Journey Begins Here, Install Our App</h1>
+                <h1>Your QR Tag Journey Begins Here, Install Our App</h1>
                 <div class="link-sec">
                     <img src="img/App Store.png" alt="">
                     <img src="img/Google Play.png" alt="">
@@ -230,9 +227,10 @@
     <!-- testimonial section  started-->
     <div class="testimonial my-container">
         <h4>Testimonial</h4>
-        <h1 class="big-heading">Real Stories, Real Satisfaction</h1>
+        <h1>Real Stories, Real Satisfaction</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
             magna aliqua.</p>
+       
         <div class="swiper mySwiper">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
@@ -339,7 +337,7 @@
                 <a href="#">contact</a>
             </div>
             <div class="flogo">
-                <img src="img/Logo.png" alt="">
+                <img src="img/Logo Color.png" alt="">
             </div>
             <p>Copyright © 2023 Scanzu All Rights Reserved</p>
         </div>
@@ -348,30 +346,6 @@
     <!-- footer section ended -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script defer src="js/bootstrap.min.js"></script>
-    <script>
-        var swiper = new Swiper(".mySwiper", {
-    slidesPerView: 3,
-    spaceBetween: 30,
-    autoplay: true,
-    loop: true,
-    grabCursor: true,
-    pagination: {
-        el: ".swiper-pagination",
-        clickable: true,
-    },
-    breakpoints: {
-        0: {
-            slidesPerView: 1,
-        },
-        580: {
-            slidesPerView: 2,
-        },
-        990: {
-            slidesPerView: 3,
-        },
-    }
-});
-    </script>
    <script src="js/script.js"></script>
 </body>
 
